src/objects/Feedback__c.object
<CustomObject>
    <description>used to capture UAT feedback</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>UI Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suggestion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <description>document.referrer for feedback, that is, what url was the user looking at when they logged the feedback</description>
        <label>Referrer</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Requires_further_clarification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires further clarification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <description>used by admin to document how this feedback was responded to.</description>
        <label>Admin Response</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No Action required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fix/Change Implemented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to resolve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For post go-live review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Ref__c</fullName>
        <description>id of test/uat step the Feedback item is referring to</description>
        <externalId>true</externalId>
        <inlineHelpText>id of test/uat step the Feedback item is referring to</inlineHelpText>
        <label>Test Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_login_at_time_Feedback_created__c</fullName>
        <defaultValue>$User.Username</defaultValue>
        <label>User  login at time Feedback created</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Test_Ref__c</columns>
        <columns>Category__c</columns>
        <columns>Priority__c</columns>
        <columns>Notes__c</columns>
        <columns>Response__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Open</fullName>
        <columns>NAME</columns>
        <columns>Test_Ref__c</columns>
        <columns>Category__c</columns>
        <columns>Priority__c</columns>
        <columns>Notes__c</columns>
        <columns>Response__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>All Open</label>
    </listViews>
    <listViews>
        <fullName>My_Feedback</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Test_Ref__c</columns>
        <columns>Priority__c</columns>
        <columns>Notes__c</columns>
        <columns>Response__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Feedback</label>
    </listViews>
    <nameField>
        <displayFormat>FB-{00000}</displayFormat>
        <label>Feedback Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>